# candle_nn

./: Cargo.toml  generate_testdata.py  test_data.txt  test_results.txt  training_data.txt  training_data_answers.txt
.devcontainer/: devcontainer.json
src/: main.rs  train.rs  train_mlp.rs
